src/objects/HUCURL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>HUC10__c</fullName>
        <label>HUC10</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUC12__c</fullName>
        <label>HUC12</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>TextArea</type>
    </fields>
    <label>HUC URL</label>
</CustomObject>